--- a/sheet.html
+++ b/sheet.html
@@ -3,5 +3,9 @@
 	<head>
 		<center><title>clickingbad_efficiency</title></center>
 
+	<center>><body><b>what the hell am i doing</body></center></b>
+	your making money nigga
+	<br>
+	gotta cook dat meth
 	</head>
 </html>
