added css file and updated html a little

--- a/sheet.html
+++ b/sheet.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
-<html>
-	<head>
-		<center><title>clickingbad_efficiency</title></center>
+<html dir="ltr" lang="en-US">
+<head>
+    <meta charset="utf-8">
+    <title>clickingbad_efficiency</title>
 
-	<center><body>what the hell am i doing</body></center>
-	your making money nigga
-	<br>
-	gotta cook dat meth
-	</head>
+    <link rel="stylesheet" type="text/css" href="style.css" media="all">
+
+</head>
+<body>
+    <header>clickingbad_efficiency</header>
+<table>
+
+<tr>
+    <td>
+    <h1>MANUFACTURING</h1>
+    </td>
+</tr>
+
+<th>Item</th>
+<th>Owned</th>
+<th>Next  Cost</th>
+<th>Initial Cost</th>
+
+<tr>
+    <td>Heisenbelt</td>
+    <form oninput="x.value=(parseInt(a.value)+1)*(parseInt(a.value)+1)*41032501000000">
+    <td><input type="number" id="a" value="0" min="0" size="2"></td>
+    <td><output name="x"></output></form></td>
+    <td>$41,032,501,000,000</td>
+	
+
+</tr>
+
+<tr>
+    <td>Meth Star</td>
+    <td></td>
+    <td>$1,632,501,000,000</td>
+</tr>
+<!--
+Moonlab Alpha<br />
+Island State<br />
+Subterranean Complex<br/>
+Meth-o-matic 9000S<br />
+Meth-o-matic 9000<br />
+-->
+</table>
+<hr>
+<h2>DISTRIBUTION</h2>
+<hr>
+Meth Horizon<br />
+Space Mules<br />
+    <footer>Created by Andrew Schneider</footer>
+</body>
 </html>
